# wkbre2

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  pyproject.toml  vcpkg.json
.github/workflows/: main.yml
cmake/: CompilerOptions.cmake
continuous-integration/: build.py
continuous-integration/code-analysis/: format.py  setup.sh
continuous-integration/windows/: install_uv.cmd  install_vcpkg.cmd  setup.cmd
wkbre2/: CMakeLists.txt  Pathfinding.h  test.cpp
wkbre2/gameset/: values.cpp
wkbre2/imgui/: CMakeLists.txt
wkbre2/util/: CMakeLists.txt
